Fix header spacing

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -124,7 +124,7 @@ h3 {
 }
 
 header.homepage-header {
-  padding: 15px;
+  padding: 1.3em 1em;
   color: white;
   background: @niteline-navy;
   background: url('../img/clouds.svg') no-repeat center bottom,
@@ -294,7 +294,7 @@ section.yellow-section {
 }
 
 header.site-header {
-  padding: 15px 0 0 0;
+  padding: 1.3em 0 0 0;
   background: @niteline-navy;
   .box-shadow(0 1px 3px rgba(0.0, 0.0, 0.0, 0.3));
 }
